--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -13,3 +13,9 @@ jobs:
       - name: Say hello
         run: |
           echo "Hello World!"
+      - name: Nows it is
+        run: |
+          date
+      - name: Directory content
+        run: |
+          ls -l
